namespace Auction.Common.Application.L3.Logic.Strings;

public static class Names
{
    public const string Lot = "лот";

    public const string User = "пользователь";
    public const string Seller = "продавец";
    public const string Buyer = "покупатель";
}
